@@ -1,17 +1,7 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 0,
+  "uniques": 0,
   "views": [
-    {
-      "timestamp": "2026-01-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2026-01-29T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
     {
       "timestamp": "2026-01-30T00:00:00Z",
       "count": 0,
@@ -69,6 +59,16 @@
     },
     {
       "timestamp": "2026-02-10T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-11T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-12T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
